--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,9 @@ opt-level = "s"
 
 [dependencies]
 gloo-console = "0.2.0"
+gloo-timers = "0.2.1"
 js-sys = "0.3.55"
+pulldown-cmark = "0.8.0"
 web-sys = { version = "0.3.55", features = ["CssStyleDeclaration","DocumentFragment", "Range", "Node", "DomRect", "NodeList"] }
 
 [dependencies.yew]
