--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ gloo-console = "0.2.0"
 gloo-timers = "0.2.1"
 js-sys = "0.3.55"
 pulldown-cmark = "0.8.0"
+unicode-segmentation = "1.8.0"
+unicode-width = "0.1.9"
 web-sys = { version = "0.3.55", features = ["CssStyleDeclaration","DocumentFragment", "Range", "Node", "DomRect", "NodeList"] }
 
 [dependencies.yew]
