--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,10 @@ js-sys = "0.3.55"
 pulldown-cmark = "0.8.0"
 unicode-segmentation = "1.8.0"
 unicode-width = "0.1.9"
-web-sys = { version = "0.3.55", features = ["CssStyleDeclaration","DocumentFragment", "Range", "Node", "DomRect", "NodeList"] }
+uuid = { version = "0.8.2", features = ["v4", "wasm-bindgen"] }
+web-sys = { version = "0.3.55", features = ["CssStyleDeclaration","DocumentFragment", "Range",
+"Node", "DomRect", "NodeList", "Performance"] }
 
 [dependencies.yew]
-version = "0.18.0"
-# git = "https://github.com/yewstack/yew.git"
+# version = "0.18.0"
+git = "https://github.com/yewstack/yew.git"
