--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "desktop-app-template"
 version = "0.1.0"
 authors = ["usa <usagrada@users.noreply.github.com>"]
-edition = "2018"
+edition = "2021"
 
 [profile.release]
 panic = "abort"
@@ -12,6 +12,7 @@ incremental = false
 opt-level = "s"
 
 [dependencies]
+derive_more = "0.99.17"
 gloo-console = "0.2.1"
 gloo-timers = "0.2.1"
 js-sys = "0.3.55"
